--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,7 @@
-<h1></h1>
 
-<br>
-<div>
+<div class="m-3" >
 <h2><%=@article.title%></h2>
 <p><%=@article.content%></p>
 
 <%= link_to "Back to list", articles_path%>
+</div>
